// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapped-type.ts [babel-ts] format 1`] = `
"Unexpected token, expected "}" (3:3)
  1 | type Mapped = {
  2 |   [key in keyof O]: number;
> 3 |   extra_member: should_not_allowed
    |   ^
  4 | };
  5 |
Cause: Unexpected token, expected "}" (3:2)"
`;

exports[`mapped-type.ts [typescript] format 1`] = `
"A mapped type may not declare properties or methods. (3:3)
  1 | type Mapped = {
  2 |   [key in keyof O]: number;
> 3 |   extra_member: should_not_allowed
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  4 | };
  5 |
Cause: A mapped type may not declare properties or methods."
`;
